fix about image width on mobile

--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -44,6 +44,7 @@
       img{
         object-fit: contain;
         max-width: 700px;
+        max-height: 600px;
       }
     }
 
