--- a/theme/styles.scss
+++ b/theme/styles.scss
@@ -77,7 +77,7 @@
     padding-top: 0;
     &--container{
       display: grid;
-      grid-template-columns: auto 400px;
+      grid-template-columns: auto minmax(300px, 500px);
       //align-items: center;
       margin-right: calc((100vw - #{$main-width-max}) / 2);
       align-items: start;
@@ -113,12 +113,17 @@
       display: flex;
       justify-content: center;
       padding-right: $main-padding;
+      @include media("<=1024px"){
+        height: 30vh;
+        height: calc(var(--vh, 1vh) * 30);
+      }
 
       img{
-        height: 100%;
-        object-fit: contain;
+        width: 100%;
+        object-fit: cover;
       }
     }
+
     &--content{
       > div{
         height: 50vh;
@@ -163,6 +168,7 @@
         margin-left: calc((100vw - #{$main-width-max}) / 2);
         padding-left: $main-padding;
         grid-column-gap: $content-padding;
+
         > div:last-of-type{
           @include fluid-height(8rem, 45vh, 32rem);
           width: 100%;
